STB-1870: Test fixes