@@ -384,7 +384,6 @@ class UserServiceTest {
     @Test
     void createUser() {
         // assign role
-        UUID userId = UUID.randomUUID();
         RegisterUserResponse.CreatedUser createdUser = new RegisterUserResponse.CreatedUser();
         createdUser.setId("id");
         createdUser.setMail("test.user@email.com");
@@ -393,8 +392,6 @@ class UserServiceTest {
         when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
         when(mockEntraUserRepository.saveAndFlush(any(EntraUser.class))).thenAnswer(returnsFirstArg());
 
-        List<String> roles = new ArrayList<>();
-        roles.add(UUID.randomUUID().toString());
         EntraUserDto entraUserDto = new EntraUserDto();
         entraUserDto.setFirstName("Test");
         entraUserDto.setLastName("User");
@@ -423,8 +420,6 @@ class UserServiceTest {
                 .success(RegisterUserResponse.builder().createdUser(createdUser).build());
         when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
 
-        List<String> roles = new ArrayList<>();
-        roles.add(UUID.randomUUID().toString());
         EntraUserDto entraUserDto = new EntraUserDto();
         entraUserDto.setFirstName("Test");
         entraUserDto.setLastName("User");
@@ -993,7 +988,6 @@ class UserServiceTest {
     @Test
     public void testGetUserAppsByUserIdReturnsAppsWhenUserHasAppsAssigned() {
         // Given
-        UUID entraUserId = UUID.randomUUID();
         UUID userProfileId = UUID.randomUUID();
         UUID appId = UUID.randomUUID();
         UUID appRoleId = UUID.randomUUID();
@@ -1011,13 +1005,6 @@ class UserServiceTest {
                 .activeProfile(true)
                 .appRoles(Set.of(appRole))
                 .userProfileStatus(UserProfileStatus.COMPLETE)
-                .build();
-        EntraUser user = EntraUser.builder()
-                .id(entraUserId)
-                .firstName("Test")
-                .lastName("User")
-                .email("test@test.com")
-                .userProfiles(Set.of(userProfile))
                 .build();
         when(mockUserProfileRepository.findById(userProfileId)).thenReturn(Optional.of(userProfile));
         // When
@@ -1650,7 +1637,6 @@ class UserServiceTest {
         @Test
         void getUserOfficesByUserId_returnsOffices_whenUserExists() {
             // Arrange
-            UUID entraUserId = UUID.randomUUID();
             UUID userProfileId = UUID.randomUUID();
             UUID officeId1 = UUID.randomUUID();
             UUID officeId2 = UUID.randomUUID();
@@ -2336,7 +2322,6 @@ class UserServiceTest {
         @Test
         void createUser_withFirm_ForMultiFirmUser_withUserProfile() {
             // assign role
-            UUID userId = UUID.randomUUID();
             RegisterUserResponse.CreatedUser createdUser = new RegisterUserResponse.CreatedUser();
             createdUser.setId("id");
             createdUser.setMail("test.user@email.com");
@@ -2345,8 +2330,6 @@ class UserServiceTest {
             when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
             when(mockEntraUserRepository.saveAndFlush(any(EntraUser.class))).thenAnswer(returnsFirstArg());
 
-            List<String> roles = new ArrayList<>();
-            roles.add(UUID.randomUUID().toString());
             EntraUserDto entraUserDto = new EntraUserDto();
             entraUserDto.setMultiFirmUser(true);
             entraUserDto.setFirstName("Test");
@@ -2371,8 +2354,6 @@ class UserServiceTest {
                     .success(RegisterUserResponse.builder().createdUser(createdUser).build());
             when(techServicesClient.registerNewUser(any(EntraUserDto.class))).thenReturn(registerUserResponse);
 
-            List<String> roles = new ArrayList<>();
-            roles.add(UUID.randomUUID().toString());
             EntraUserDto entraUserDto = new EntraUserDto();
             entraUserDto.setFirstName("Test");
             entraUserDto.setLastName("User");
@@ -2861,7 +2842,7 @@ class UserServiceTest {
     }
 
     @Test
-    void setDefaultActiveProfile_no_firm() throws IOException {
+    void setDefaultActiveProfile_no_firm() {
         UUID firm1Id = UUID.randomUUID();
         UUID firm2Id = UUID.randomUUID();
         UUID firm3Id = UUID.randomUUID();
@@ -3048,7 +3029,7 @@ class UserServiceTest {
 
         // Then - Should only appear once due to distinct()
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getName()).isEqualTo("Shared App");
+        assertThat(result.getFirst().getName()).isEqualTo("Shared App");
         verify(mockAppRoleRepository).findByUserTypeRestrictionContains(UserType.INTERNAL.name());
     }
 
@@ -3436,8 +3417,8 @@ class UserServiceTest {
         // Then
         assertThat(result.getUsers()).hasSize(1);
         assertThat(result.getTotalUsers()).isEqualTo(1);
-        assertThat(result.getUsers().get(0).getEntraUser().getFirstName()).isEqualTo("Test");
-        assertThat(result.getUsers().get(0).getEntraUser().getLastName()).isEqualTo("Name");
+        assertThat(result.getUsers().getFirst().getEntraUser().getFirstName()).isEqualTo("Test");
+        assertThat(result.getUsers().getFirst().getEntraUser().getLastName()).isEqualTo("Name");
 
         // Verify the repository was called with the search criteria
         verify(mockUserProfileRepository).findBySearchParams(any(UserSearchCriteria.class), any(PageRequest.class));
@@ -3475,7 +3456,7 @@ class UserServiceTest {
                     .build();
 
             final AppRole newRole = AppRole.builder()
-                    .id(UUID.fromString(selectedRoles.get(0)))
+                    .id(UUID.fromString(selectedRoles.getFirst()))
                     .name("NEW_ROLE")
                     .description("New Role Description")
                     .ccmsCode("CCMS_NEW")
@@ -3936,6 +3917,18 @@ class UserServiceTest {
         private EntraUserRepository entraUserRepository;
 
         @Mock
+        private AppRoleRepository appRoleRepository;
+
+        @Mock
+        private TechServicesClient techServicesClient;
+
+        @Mock
+        private FirmService firmService;
+
+        @Mock
+        private OfficeRepository officeRepository;
+
+        @Mock
         private ModelMapper mapper;
 
         @InjectMocks
@@ -3994,7 +3987,7 @@ class UserServiceTest {
             when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
 
             RuntimeException ex = assertThrows(RuntimeException.class, () ->
-                    userService.addMultiFirmUserProfile(user, firmDto, null, null, "admin"));
+                    userService.addMultiFirmUserProfile(user, firmDto, null, List.of(), "admin"));
 
             assertThat(ex.getMessage()).contains("User profile already exists");
         }
@@ -4030,7 +4023,6 @@ class UserServiceTest {
             EntraUser entraUser = EntraUser.builder().id(entraUserId).multiFirmUser(true).build();
 
             when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
-            when(mapper.map(firmDto, Firm.class)).thenReturn(firm);
 
             UserProfile result = userService.addMultiFirmUserProfile(userDto, firmDto, null, null, "admin");
 
@@ -4045,21 +4037,24 @@ class UserServiceTest {
             Firm existingFirm = Firm.builder().id(firmId).build();
 
             UUID entraUserId = UUID.randomUUID();
-            UUID newFirmId = UUID.randomUUID();
-            Firm newFirm = Firm.builder().id(newFirmId).build();
-            FirmDto newFirmDto = FirmDto.builder().id(newFirmId).build();
             EntraUser entraUser = EntraUser.builder().id(entraUserId).multiFirmUser(true).build();
             UserProfile existingProfile = UserProfile.builder().firm(existingFirm).build();
             entraUser.setUserProfiles(new HashSet<>(Set.of(existingProfile)));
 
-            when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
+            Office office = Office.builder().id(UUID.randomUUID()).build();
+            OfficeDto officeDto = new OfficeDto();
+            AppRole appRole = AppRole.builder().id(UUID.randomUUID()).name("role").build();
+            AppRoleDto appRoleDto = AppRoleDto.builder().id(UUID.randomUUID().toString()).build();
+            FirmDto newFirmDto = FirmDto.builder().id(UUID.randomUUID()).build();
 
-            when(mapper.map(newFirmDto, Firm.class)).thenReturn(newFirm);
+            when(entraUserRepository.findById(entraUserId)).thenReturn(Optional.of(entraUser));
+            when(officeRepository.findById(any())).thenReturn(Optional.ofNullable(office));
+            when(appRoleRepository.findById(any())).thenReturn(Optional.ofNullable(appRole));
 
             EntraUserDto user = EntraUserDto.builder().id(entraUserId.toString()).multiFirmUser(true).build();
 
-            UserProfile result = userService.addMultiFirmUserProfile(user,
-                    FirmDto.builder().id(newFirmId).build(), null, null, "admin");
+            UserProfile result = userService.addMultiFirmUserProfile(user, newFirmDto, List.of(officeDto),
+                    List.of(appRoleDto), "admin");
 
             assertThat(result.isActiveProfile()).isFalse();
             verify(userProfileRepository).save(result);
